Moon Light (Free Play)
Mundial 90 (Free Play)
Nine Ball (Ball handling MOD beta18)
Nitro Groundshaker (7-digit conversion with siren patch)
Oba-Oba (old hardware)
Pin-Bot J-1 (PEMBOT (no relation))
Pool Sharks LA-7C (competition MOD) (updated)
Raid, The (alternate set)
Space Train (old hardware)
Spider-Man 1.02 (English, French)
Star Trek 25th Anniversary 3.00 (unofficial MOD)
Star Wars 1.01
Striker Xtreme 1.00 (Italian)
Theatre of Magic 1.3XC (competition MOD) (updated)
Trident (MOD rev. 23c)
Twilight Zone L-5, LA-9 (aka PAPA Tournament Version 9.0)
WHO Dunnit 1.2 (Elevator text fix), 1.2 (German Sound / Elevator text fix)
World Cup Soccer 0.62b (FreeWPC based rewrite)

Removed Clones:
Atarians, The (MOD working bootleg) - the original ROMs work fine after latest emulation patches



Version 3.2 (October 6th, 2019) - "Sounds good II"
------------------------------------------------------------------------------

Initial efforts to start converting the PinMAME source base over to the 3-Clause BSD License (not completed yet, so for the full binary package the old license stays in place for now!)

*** CORE/CPU ***
Improved HC55516 CVSD sound emulation (most Williams/Bally machines in the Gorgar up to Twilight Zone range)
Improved YM2151 sound/timing emulation (mainly WPC pre-DCS machines, maybe improves even other manufacturers like Data East)
Fixed the Nuova Bell sound board. This had various issues, and information is quite sparse
Implement 'fast flips' support for Jack*Bot and Metallica 1.80.0LE
Fix NBA Fastbreak 'fast flips' so that the million dollar shot works
Fix Champion Pub 'fast flips' support
Fixed Barni emulation
Added preliminary E.F.O. hardware support (games will crash after a few seconds due to protection)
Increased main CPU IRQ rate for Bushido, Mach 2, and Jolly Park
Decreased DMD CPU clock for Bushido, Mach 2, Jolly Park, and Verne's World
Inverted solenoid #20 on Jolly Park, fixes ball release from magnetic house